# ADS

./: CMakeLists.txt  meson.build
.github/workflows/: build.yml
AdsLib/: AdsWrapper.cpp  AdsWrapper.h
cmake/: Config.cmake.in  nilrt-x64-toolchain.cmake
example/: AdsWrapper.cpp  AdsWrapper.h  CMakeLists.txt  Makefile  example.cpp  meson.build  meson_options.txt
src/: AdsWrapper.cpp  AdsWrapper.h  CMakeLists.txt
